environment/workspace/modules/exposing/ingress/multiple-ingress/ingress-assets.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assets
  namespace: assets
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health.html
    # HIGHLIGHT
    alb.ingress.kubernetes.io/group.name: retail-app-group
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /assets
        pathType: Prefix
        backend:
          service:
            name: assets
            port:
              number: 80
